// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageButtons > renders correctly with 0 pages 1`] = `
<div>
  <div
    class="flex justify-center mt-2 space-x-1"
  />
</div>
`;

exports[`PageButtons > renders correctly with 1 page 1`] = `
<div>
  <div
    class="flex justify-center mt-2 space-x-1"
  >
    <button
      class="px-3 py-1 rounded-md bg-red-600 text-white"
    >
      1
    </button>
  </div>
</div>
`;

exports[`PageButtons > renders correctly with 5 pages and current page 1 1`] = `
<div>
  <div
    class="flex justify-center mt-2 space-x-1"
  >
    <button
      class="px-3 py-1 rounded-md bg-red-600 text-white"
    >
      1
    </button>
    <button
      class="px-3 py-1 rounded-md bg-gray-600 text-gray-200"
    >
      2
    </button>
    <button
      class="px-3 py-1 rounded-md bg-gray-600 text-gray-200"
    >
      3
    </button>
    <button
      class="px-3 py-1 rounded-md bg-gray-600 text-gray-200"
    >
      4
    </button>
    <button
      class="px-3 py-1 rounded-md bg-gray-600 text-gray-200"
    >
      5
    </button>
  </div>
</div>
`;

exports[`PageButtons > renders correctly with 5 pages and current page 3 1`] = `
<div>
  <div
    class="flex justify-center mt-2 space-x-1"
  >
    <button
      class="px-3 py-1 rounded-md bg-gray-600 text-gray-200"
    >
      1
    </button>
    <button
      class="px-3 py-1 rounded-md bg-gray-600 text-gray-200"
    >
      2
    </button>
    <button
      class="px-3 py-1 rounded-md bg-red-600 text-white"
    >
      3
    </button>
    <button
      class="px-3 py-1 rounded-md bg-gray-600 text-gray-200"
    >
      4
    </button>
    <button
      class="px-3 py-1 rounded-md bg-gray-600 text-gray-200"
    >
      5
    </button>
  </div>
</div>
`;
